<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/inteface_padding"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/rl_app_icon"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle_purple_200"
        android:padding="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/settings_icon"></ImageView>
    </RelativeLayout>
    <EditText
        android:id="@+id/edt_Email"
        style="@style/input_style"
        app:layout_constraintTop_toBottomOf="@id/rl_app_icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_mail"

        />
    <EditText
        android:id="@+id/edt_password"
        style="@style/input_style"
        app:layout_constraintTop_toBottomOf="@id/edt_Email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textPassword"
        android:hint="@string/hint_password"

        />
    <RelativeLayout
        android:id="@+id/rl_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_purple_200"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_submit"
        android:textSize="24sp"
        android:textColor="@color/white"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_200"
        android:textSize="24sp"
        android:text="@string/tv_signup"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="30dp"

        app:layout_constraintTop_toBottomOf="@id/rl_submit"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>