<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/inteface_padding"
    android:background="@color/white"
    tools:context=".SignupActivity">
    <ImageView
        android:id="@+id/img_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"/>
    <EditText
        android:id="@+id/edt_last_name"
        app:layout_constraintTop_toTopOf="@id/img_back"
        style="@style/input_style"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_mail"
        />
    <EditText
        android:id="@+id/edt_first_name"
        app:layout_constraintTop_toBottomOf="@id/edt_last_name"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_mail"
        />
    <EditText
        android:id="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_first_name"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_mail"
        />
    <EditText
        android:id="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        />
    <EditText
        android:id="@+id/edt_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/IT_height"
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password"
        />
    <TextView
        android:id="@+id/tv_man"
        app:layout_constraintRight_toLeftOf="@id/switch_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_light"
        android:text="Homme"
        android:textColor="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"/>
<Switch
    android:id="@+id/switch_gender"
    app:layout_constraintRight_toRightOf="@id/tv_women"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="@id/tv_man"
    app:layout_constraintLeft_toRightOf="@id/tv_man"
    app:layout_constraintTop_toTopOf="@id/tv_man"/>
    <TextView
        android:id="@+id/tv_women"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="Femme"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@id/switch_gender"
        app:layout_constraintLeft_toRightOf="@id/switch_gender"
        app:layout_constraintTop_toTopOf="@id/switch_gender"/>
    <CheckBox
        android:id="@+id/chk_cgu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accepter CGU"
        android:textColor="@color/purple_200"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_man"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_purple_200"
        android:id="@+id/rl_submit"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/chk_cgu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_light"
            android:text="@string/tv_submit"
            android:textSize="24sp"
            android:textColor="@color/white"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>